--- a/templates/base.jinja.html
+++ b/templates/base.jinja.html
@@ -29,7 +29,7 @@
     <div class="container-md">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">股票資訊</a>
+                <a class="navbar-brand" href="/">Youbike2.0</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
